<resources>
    <string name="app_name">Check24_2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="text_all">All</string>
    <string name="text_available">Available</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_error">Something went wrong</string>
    <string name="text_no_data_found">No data found</string>

    <string name="text_select_fav">Select as favourite</string>
    <string name="text_unselect_fav">Remove as favourite</string>
    <string name="text_long_desc">Long Description</string>
    <string name="text_footer_text">© 2016 Check24</string>
    <string name="text_product_image">Product Image</string>

    <string name="text_price">Price</string>
    <string name="title_activity_home2">HomeActivity2</string>

</resources>