<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.presentation.ProductDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp5"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/dp5"
        tools:context=".details.presentation.ProductDetailsFragment">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/dp80"
            android:layout_height="@dimen/dp80"
            android:contentDescription="@string/text_product_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10.11.2022" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            tools:text="this is dummy big text to check the ui if this looks good or bad." />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_fav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_select_fav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_bar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_long_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/text_long_desc"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_fav" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_long_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/text_long_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_long_description" />


        <include
            android:id="@+id/footer"
            layout="@layout/item_footer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:text="@string/text_long_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_long_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

